// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/Desktop hook toggles correctly 1`] = `
<div
  className="css-1nx07pp-root"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <header
    className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed open mui-fixed css-1pezhp2-MuiPaper-root-MuiAppBar-root-appBar"
  >
    <div
      id="actionBar"
      isNetwork={false}
      toggleNetwork={[Function]}
    />
    <div
      id="TitleBar"
      title="hello world"
    />
  </header>
  <div
    className="MuiDrawer-root MuiDrawer-docked open css-1bllxe5-MuiDrawer-docked-drawer-drawerOpen"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper open MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-15vzzxz-MuiPaper-root-MuiDrawer-paper-drawerOpen"
    >
      <svg
        aria-label="toggle menu"
        className="css-v4r7lq-logo"
        onClick={[Function]}
        role="button"
      />
      <div
        id="MenuItems"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/Desktop it renders 1`] = `
<div
  className="css-1nx07pp-root"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <header
    className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-1pezhp2-MuiPaper-root-MuiAppBar-root-appBar"
  >
    <div
      id="actionBar"
      isNetwork={false}
      toggleNetwork={[Function]}
    />
    <div
      id="TitleBar"
      title="hello world"
    />
  </header>
  <div
    className="MuiDrawer-root MuiDrawer-docked closed css-1boy60f-MuiDrawer-docked-drawer-drawerClose"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper closed MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-1222sxd-MuiPaper-root-MuiDrawer-paper-drawerClose"
    >
      <svg
        aria-label="toggle menu"
        className="css-v4r7lq-logo"
        onClick={[Function]}
        role="button"
      />
      <div
        id="MenuItems"
      />
    </div>
  </div>
</div>
`;
